--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,14 +122,17 @@ dependencies {
   testImplementation "com.squareup.okhttp3:mockwebserver:$okhttp_version"
 
   androidTestImplementation "io.mockk:mockk-android:1.8.10.kotlin13"
+  androidTestImplementation "junit:junit:4.12"
+  androidTestImplementation "com.squareup.okhttp3:mockwebserver:$okhttp_version"
+
+  androidTestImplementation "androidx.test:core:$androidx_version"
+  androidTestImplementation "androidx.test:runner:$test_runner_version"
+  androidTestImplementation "androidx.test:rules:$test_rules_version"
+  androidTestImplementation "androidx.test.ext:junit:$test_ext_junit_version"
   androidTestImplementation "androidx.recyclerview:recyclerview:$recyclerview_version"
   androidTestImplementation "androidx.legacy:legacy-support-v4:$legacy_support_version"
   androidTestImplementation "androidx.appcompat:appcompat:$appcompat_version"
   androidTestImplementation "com.google.android.material:material:$material_version"
-  androidTestImplementation "junit:junit:4.12"
-  androidTestImplementation "com.squareup.okhttp3:mockwebserver:$okhttp_version"
-  androidTestImplementation "androidx.test:runner:$test_runner_version"
-  androidTestImplementation "androidx.test:rules:$test_rules_version"
   androidTestImplementation "androidx.room:room-testing:$room_version"
   androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
   androidTestImplementation "androidx.test.espresso:espresso-contrib:$espresso_version"
