Updated dependency: conscrypt version

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
     coroutines_version = "1.0.0"
     okhttp_version = "3.11.0"
     rome_version = "1.7.1"
+    conscrypt_version = "1.4.1"
 
     androidx_version = "1.0.0"
     work_version = '1.0.0-alpha11'
