--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,7 +102,7 @@ dependencies {
   // For better fetching
   implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
   // For supporting missing cyphers on older platforms
-  implementation "org.conscrypt:conscrypt-android:1.1.2"
+  implementation "org.conscrypt:conscrypt-android:$conscrypt_version"
   // Image loading
   implementation "com.github.bumptech.glide:glide:3.7.0"
   implementation "com.github.bumptech.glide:okhttp3-integration:1.4.0@aar"
