Add signing config

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,11 +60,21 @@ android {
     }
   }
 
+  signingConfigs {
+    release {
+      storeFile file(STORE_FILE)
+      storePassword STORE_PASSWORD
+      keyAlias KEY_ALIAS
+      keyPassword KEY_PASSWORD
+    }
+  }
+
   buildTypes {
     debug {
       minifyEnabled false
     }
     release {
+      signingConfig signingConfigs.release
       minifyEnabled false
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
