Fixed opening in browser from notification not marking as read or dismissing
Now item will be marked as read and the notification is dismissed too.

Fixes #155

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -120,6 +120,9 @@
         android:name=".ui.filepicker.MyFilePickerActivity"
         android:label="@string/app_name"
         android:theme="@style/FilePickerTheme"/>
+    <activity
+        android:name=".ui.OpenInWebBrowserActivity"
+        android:label="@string/open_link_in_browser" />
   </application>
 
 </manifest>
