--- a/app/build.gradle
+++ b/app/build.gradle
@@ -121,6 +121,9 @@ dependencies {
   testImplementation "io.mockk:mockk:1.8.10.kotlin13"
   testImplementation "com.squareup.okhttp3:mockwebserver:$okhttp_version"
 
+
+  androidTestImplementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  androidTestImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
   androidTestImplementation "io.mockk:mockk-android:1.8.10.kotlin13"
   androidTestImplementation "junit:junit:4.12"
   androidTestImplementation "com.squareup.okhttp3:mockwebserver:$okhttp_version"
