Added a applicationId suffix to debug version and custom name
This will allow the debug version to be installed concurrently with
release mode and make it different in the app drawer

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ android {
   buildTypes {
     debug {
       minifyEnabled false
+      applicationIdSuffix ".debug"
     }
     release {
       minifyEnabled false
