Changed so that notification actions do not open the app after pressing Back

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -149,7 +149,9 @@
         android:theme="@style/FilePickerTheme"/>
     <activity
         android:name=".ui.OpenLinkInDefaultActivity"
-        android:label="@string/open_link_in_browser" />
+        android:label="@string/open_link_in_browser"
+        android:taskAffinity="${applicationId}.OpenLinkTask"
+        android:launchMode="singleInstance"/>
   </application>
 
 </manifest>
