--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,7 +63,8 @@ deploy_playstore:
   script:
     - ./deploy_playstore.sh
   only:
-    - play
+    - tags
+    - /^\d+\.\d+\.\d+$/
   environment:
     name: Play
     url: https://play.google.com/store/apps/details?id=com.nononsenseapps.feeder.play
