--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,7 +107,7 @@ dependencies {
   kapt "androidx.room:room-compiler:$room_version"
   implementation "androidx.room:room-runtime:$room_version"
 
-  implementation "android.arch.work:work-runtime-ktx:$work_version"
+  implementation "androidx.work:work-runtime-ktx:$work_version"
 
   implementation "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
   implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
@@ -118,7 +118,7 @@ dependencies {
 
   // ViewModel and LiveData
   implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
-  implementation "androidx.paging:paging-runtime:$paging_version"
+  implementation "androidx.paging:paging-runtime-ktx:$paging_version"
 
   // To support SDK18
   implementation "com.nononsenseapps:filepicker:4.1.0"
