--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,8 +63,8 @@ android {
 
   buildTypes {
     debug {
-      minifyEnabled true
-      shrinkResources true
+      minifyEnabled false
+      shrinkResources false
       applicationIdSuffix ".debug"
       pseudoLocalesEnabled true
 
