--- a/jsonfeed-parser/build.gradle
+++ b/jsonfeed-parser/build.gradle
@@ -3,11 +3,11 @@ apply plugin: 'java-library'
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    api 'com.squareup.okhttp3:okhttp:3.10.0'
-    api 'com.squareup.moshi:moshi:1.5.0'
+    api "com.squareup.okhttp3:okhttp:$okhttp_version"
+    api "com.squareup.moshi:moshi:$moshi_version"
 
     // tests
     testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-    testImplementation 'junit:junit:4.12'
+    testImplementation "junit:junit:4.12"
 }
