--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
 
     multi_dex_version = "1.0.3"
 
+    kodein_version = "6.3.3"
     coroutines_version = "1.3.1"
     okhttp_version = "3.11.0"
     rome_version = "1.7.1-f1"
