--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ buildscript {
 
     androidx_core_version = "1.2.0-alpha04"
     workmanager_version = '2.2.0'
-    constraintlayout_version = "2.0.0-beta2"
+    constraintlayout_version = "2.0.0-alpha5"
     recyclerview_version = "1.0.0"
     legacy_support_version = "1.0.0"
     appcompat_version = "1.1.0"
