--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,12 +16,11 @@
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
-    android:theme="@style/AppTheme"
+    android:theme="@style/AppThemeDay"
     android:usesCleartextTraffic="true">
     <activity
       android:name=".ui.FeedActivity"
-      android:label="@string/app_name"
-      android:theme="@style/FeedsTheme">
+      android:label="@string/app_name">
 
       <nav-graph android:value="@navigation/nav_graph" />
 
@@ -46,7 +45,7 @@
       android:name=".ui.EditFeedActivity"
       android:label="@string/title_activity_edit_feed"
       android:parentActivityName=".ui.FeedActivity"
-      android:theme="@style/EditFeedTheme"
+      android:theme="@style/EditFeedThemeDay"
       android:windowSoftInputMode="adjustResize|stateVisible">
       <meta-data
         android:name="android.support.PARENT_ACTIVITY"
