--- a/.build.yml
+++ b/.build.yml
@@ -13,26 +13,18 @@ packages:
 environment:
   ANDROID_COMPILE_SDK: "28"
   ANDROID_BUILD_TOOLS: "28.0.3"
-  GRADLE_USER_HOME: "${HOME}/.gradle"
-  ANDROID_HOME: "${HOME}/.androidhome"
+  GRADLE_USER_HOME: "/home/build/.gradle"
+  ANDROID_HOME: "/home/build/.androidhome"
   ANDROID_EMULATOR_SDK: "28"
 sources:
   - https://git.sr.ht/~cowboyprogrammer/feeder
 tasks:
  - setup: |
      export PATH="${ANDROID_HOME}/emulator/:${ANDROID_HOME}/tools/bin/:${ANDROID_HOME}/tools/:${ANDROID_HOME}/platform-tools/:${PATH}"
-     mkdir -p "${ANDROID_HOME}"
-     if ! [ -d "${ANDROID_HOME}/tools" ]; then
-       wget --quiet -O "${ANDROID_HOME}/tools.zip" https://dl.google.com/android/repository/sdk-tools-linux-3859397.zip
-       unzip -qq "${ANDROID_HOME}/tools.zip" -d "${ANDROID_HOME}"
-     fi
-     rm -f "${ANDROID_HOME}/tools.zip"
-     echo y | sdkmanager --update
-     echo y | sdkmanager \
-           "tools" \
-           "platform-tools" \
-           "build-tools;${ANDROID_BUILD_TOOLS}" \
-           "platforms;android-${ANDROID_COMPILE_SDK}"
+     env
+     cd feeder
+     echo 'org.gradle.jvmargs=-Xmx1g' >> gradle.properties
+     ci/before
  - build: |
      cd feeder
-     ./gradlew build --info
+     ./gradlew build
