--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ android {
     versionCode 68
     versionName "1.8.29"
     compileSdkVersion 28
-    minSdkVersion 18
+    minSdkVersion 18 // 23 was the conscrypt cutoff
     targetSdkVersion 28
     multiDexEnabled true
 
@@ -157,8 +157,6 @@ dependencies {
   implementation project(":jsonfeed-parser")
   // For better fetching
   implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
-  // For supporting missing cyphers on older platforms
-  implementation "org.conscrypt:conscrypt-android:$conscrypt_version"
   // Image loading
   implementation "com.github.bumptech.glide:glide:3.7.0"
   implementation "com.github.bumptech.glide:okhttp3-integration:1.4.0@aar"
