--- a/.build.yml
+++ b/.build.yml
@@ -20,7 +20,7 @@ sources:
   - https://git.sr.ht/~cowboyprogrammer/feeder
 triggers:
   - action: email
-    condition: always
+    condition: failure
     to: jonas.srht@cowboyprogrammer.org
 secrets:
   - d9eb6ad0-7288-447a-954b-74e22ef4d054
