--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -4,11 +4,12 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
+    - uses: srt32/git-actions@v0.0.3
+      with:
+        args: git submodule update --init --recursive
     - name: set up JDK 1.8
       uses: actions/setup-java@v1
       with:
@@ -19,9 +20,12 @@ jobs:
   uitests:
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: run tests
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: 28
-          script: ./gradlew connectedAndroidCheck
+    - uses: actions/checkout@v2
+    - uses: srt32/git-actions@v0.0.3
+      with:
+        args: git submodule update --init --recursive
+    - name: run tests
+      uses: reactivecircus/android-emulator-runner@v2
+      with:
+        api-level: 28
+        script: ./gradlew connectedAndroidCheck
