--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -7,9 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: srt32/git-actions@v0.0.3
-      with:
-        args: git submodule update --init --recursive
+    - name: Checkout submodules
+      shell: bash
+      run: |
+        auth_header="$(git config --local --get http.https://github.com/.extraheader)"
+        git submodule sync --recursive
+        git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
     - name: set up JDK 1.8
       uses: actions/setup-java@v1
       with:
@@ -21,9 +24,12 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: srt32/git-actions@v0.0.3
-      with:
-        args: git submodule update --init --recursive
+    - name: Checkout submodules
+      shell: bash
+      run: |
+        auth_header="$(git config --local --get http.https://github.com/.extraheader)"
+        git submodule sync --recursive
+        git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
     - name: run tests
       uses: reactivecircus/android-emulator-runner@v2
       with:
