--- a/app/build.gradle
+++ b/app/build.gradle
@@ -141,7 +141,7 @@ dependencies {
   // To support SDK18
   implementation "com.nononsenseapps:filepicker:4.1.0"
   // Better times
-  implementation "joda-time:joda-time:$joda_version"
+  implementation "com.jakewharton.threetenabp:threetenabp:$threetenabp_version"
   // HTML parsing
   implementation "org.jsoup:jsoup:$jsoup_version"
   implementation "org.ccil.cowan.tagsoup:tagsoup:1.2.1"
@@ -174,6 +174,8 @@ dependencies {
   testImplementation "io.mockk:mockk:$mockk_version"
   testImplementation "com.squareup.okhttp3:mockwebserver:$okhttp_version"
 
+  // Needed for unit testing timezone stuff
+  testImplementation "org.threeten:threetenbp:$threetentest_version"
 
   androidTestImplementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
   androidTestImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
