Added support for custom tabs
Closes #114

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -145,6 +145,10 @@
       android:label="@string/open_link_in_browser"
       android:launchMode="singleInstance"
       android:taskAffinity="${applicationId}.OpenLinkTask" />
+
+    <service
+      android:name=".model.FeederService"
+      android:exported="true" />
   </application>
 
 </manifest>
