--- a/app/build.gradle
+++ b/app/build.gradle
@@ -156,7 +156,6 @@ dependencies {
   implementation "com.github.bumptech.glide:glide:3.7.0"
   implementation "com.github.bumptech.glide:okhttp3-integration:1.4.0@aar"
 
-
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
   // Coroutines
   implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
@@ -165,6 +164,8 @@ dependencies {
   // Dependency injection
   implementation "org.kodein.di:kodein-di-generic-jvm:$kodein_version"
   implementation "org.kodein.di:kodein-di-framework-android-x:$kodein_version"
+  // Custom tabs
+  implementation "com.android.support:customtabs:28.0.0"
   // tests
   testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
   testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
