Added a minified debug flavor and added R8 rules that need verification

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,14 @@ android {
 
       proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
     }
+    debugMini {
+      initWith debug
+      minifyEnabled true
+      shrinkResources true
+      proguardFiles getDefaultProguardFile('proguard-android.txt'),
+              'proguard-rules.pro'
+      matchingFallbacks = ['debug']
+    }
     release {
       minifyEnabled false
       shrinkResources false
